# AOS

./: .gitignore  LICENSE.txt  Makefile  README.md  deferred_project_image.fs.glsl  main.py  requirements.txt  show_fbo.fs.glsl
AOS Simulation/: README.md
AOS for DJI/: README.md  Readme.md
AOS for Drone Swarm/: droneswarms.ipynb
AOS for Drone Swarms/: README.md  droneswarms.ipynb
AOS for Drone Swarms/LFR/: Makefile  README.md
AOS for Own Projects/: README.md  requirements.txt
AOS for Own Projects/CAM/: README.md  Undistort.py  sample.py
AOS for Own Projects/DRONE/: FlyingControl.py  Renderer_Detector.py  ServerUpload.py  dronecommunication.c  main.py
AOS for Own Projects/PLAN/: PathVisualizer.py
AOS for Own Projects/SERV/: README.md
AOS for Own Projects/SERV/serverlibs/cg-shapes/: Cargo.toml
AOS for Own Projects/SERV/serverlibs/cg-shapes/benches/: ray_cast.rs
AOS for Own Projects/SERV/serverlibs/cg-shapes/src/: bbox.rs  float_eq.rs  implicit_line.rs  plane.rs  ray.rs  triangle.rs
AOS for Own Projects/SERV/serverlibs/geo-utm/: Cargo.toml
AOS for Own Projects/SERV/serverlibs/geo-utm/src/: angles.rs  error.rs
AOS for drone swarms/: README.md
CAM/: Camera.py  CameraControl.py  README.md  Undistort.py  sample.py
DET/: README.md  detector.py  evaluate_open_field.py  naos_det.py
DET/weights/: yolov4-tiny.xml
DRONE/: DroneCom.py  FlyingControl.py  README.md  Renderer_Detector.py  Renderer_Detector_MultiProcess_Deferred.py  ServerUpload.py  droneCommunication_SI_ZeroTol.c  dronecommunication.c  main.py  server_test.py  utils.py
DRONE SWARMS/: README.md  droneswarms.ipynb
DRONESWARMS/: README.md
LFR/: .gitignore  README.md
LFR/include/: AOS.h  AOSGenerator.h  image.h
LFR/lib/: assimp-vc141-mt.lib  glfw3.lib
LFR/python/: LFR_utils.py  README.md  pyaos_test.py  requirements.txt  sample.py  setup_Unix.py  setup_Win.py
LFR/src/: AOS.cpp  AOSGenerator.cpp  benchmark.cpp  demViewer.cpp  main.cpp  utils.cpp
LFR/vs/: LFR.vcxproj
PLAN/: FlyingControl.py  PathVisualizer.py  Planner.py  README.md
SERV/: Cargo.toml  README.md
SERV/server/: Cargo.toml
SERV/server/src/: drone_images.rs  file_blob.rs  file_db.rs  flight_paths.rs  integral_images.rs
SERV/serverlibs/cg-shapes/src/: lib.rs  ray_intersect.rs
SERV/serverlibs/geo-utm/benches/: utm_conversion.rs
SERV/serverlibs/geo-utm/src/: band.rs  compare.rs  datum.rs  lat_lon.rs  lib.rs  utm.rs  utm_relative.rs  with_height.rs  zone.rs
SERV/serverlibs/sar-types/: Cargo.toml
data/: Hellmonsoedt_pose_corr.json
data/Hellmonsoedt_hdr_mean_r512/: 20191004_091413.tiff  20191004_091431.tiff  20191004_091436.tiff  20191004_091445.tiff  20191004_091446.tiff  20191004_091447.tiff  20191004_091448.tiff  (+528 more)
include/: AOS.h  AOSGenerator.h  LFGenerator.h  image.h
python/: AOS.cpp  README.md  glesLFR_Py.pyx  minrunscript.py  pyaos.pyx  pyaos_indcode.pyx  pyaos_test.py  setup_Win.py  test.py
shader/: deferred_project_image.fs.glsl  deferred_project_image.vs.glsl  g_buffer.fs.glsl  g_buffer.vs.glsl  project_image.fs.glsl  project_image.vs.glsl  show_fbo.fs.glsl  show_fbo.vs.glsl  world_pos.fs.glsl
src/: AOS.cpp  AOSGenerator.cpp  LFGenerator.cpp  benchmark.cpp  gl_utils.cpp  glad.c  glesLFR.cpp  glm_utils.cpp  image.cpp  main.cpp  py_utils.cpp
tests/: test.cpp
vs/: UnitTests.vcxproj  benchmark_100trails.json  benchmark_10trails.json  benchmark_copy.json  demViewer.vcxproj  glesLFR.sln  glesLFR.vcxproj  glesLFR.vcxproj.filters  imgui.ini
(+186 files in other folders)
