[package]
name = "server"
version = "0.1.0"
authors = ["Andreas Hofstadler <andi@toringor.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sar-types = { version = "0.1.0", path = "../serverlibs/sar-types" }

anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
regex = "1"

actix-web = "3"
actix-files = "0.5"
tokio = { version = "0.2", features = ["sync", "fs"] }
bytes = "0.5"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.48"
thiserror = "1"
geo-utm = { version = "0.1.0", path = "../serverlibs/geo-utm" }
geo-types = "0.7"
kml = "0.3"

