[package]
name = "sar-types"
version = "0.1.0"
authors = ["Andreas Hofstadler <andi@toringor.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
cg-shapes = {version = "0.1.0", path = "../cg-shapes"}
geo-utm = {version = "0.1.0", path = "../geo-utm"}

chrono = {version = "0.4", features = ["serde"] }

# serialization stuff
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
