[package]
name = "cg-shapes"
version = "0.1.0"
authors = ["Andreas Hofstadler <andi@toringor.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A bit bare-bones cgmath library. Has most of the matrix stuff and makes code easy to read
# so it is quite useful
cgmath = {version="0.17", features=["mint"]}

mint = "0.5.6"

rayon = "1.5.0"

# currently an experiment - seems to work only when converting some of my modules
# to library crates.
[[bench]]
name = "ray_cast"
harness = false
# also for the non-functional benchmark code
[dev-dependencies]
criterion = {version = "0.3.*", features = ["html_reports"] }
bincode = "1.3.1"
serde = { version = "1.0.*", features = ["derive"] }
anyhow =  "1.0.*"
futures = "0.3.*"
tobj = "2.0.*"
rand = "0.6.*"
