[package]
name = "geo-utm"
version = "0.1.0"
authors = ["Andreas Hofstadler <andi@toringor.at>", "Chris Veness"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"


num_enum = "0.4.3"
lazy_static = "1.4"
geo-types = { version = "0.7", features = ["serde"] }


# currently an experiment - seems to work only when converting some of my modules
# to library crates.
[[bench]]
name = "utm_conversion"
harness = false

# also for the non-functional benchmark code
[dev-dependencies]
criterion = {version = "0.3.*", features = ["html_reports"] }
bincode = "1.3.1"
anyhow =  "1.0.*"
futures = "0.3.*"
tobj = "2.0.*"
rand = "0.6.*"
